--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="header container">
+    <!-- <header class="header container">
         <img class="header__logo" src="./image/logo.svg" alt="Logo">
         <nav class="header__nav nav">
             <ul class="nav__list">
@@ -138,13 +138,14 @@
             </div>
         </div>
 
-    </section>
+    </section> -->
 
 
 
 
     <main>
-        <div id="carouselExampleIndicators" class="carousel slide container" data-bs-ride="carousel">
+
+        <!-- <div id="carouselExampleIndicators" class="carousel slide container" data-bs-ride="carousel">
 
             <div class="carousel-indicators">
 
@@ -279,7 +280,7 @@
                 </span>
                 <span class="visually-hidden">Следующий</span>
             </button>
-        </div>
+        </div> -->
 
         <section class="catalog container">
             <h1 class="visually-hidden">Бетон</h1>
@@ -326,9 +327,35 @@
                         Перейти в раздел <img src="./icons/arrow-right-yellow.svg" alt="">
                     </a>
                 </div>
-
             </div>
+        </section>
 
+        <section class="company container">
+            <h2 class="company__title"><span>02</span>О нас</h2>
+            <h3 class="catalog__subtitle">Создаем уникальные бетонные изделия, отражающие вашу индивидуальность</h3>
+
+            <div class="company__body">
+
+                <div class="company__left">
+                    <div class="company__text">
+                        <p>Наша компания занимается производством различных изделий
+                            из стеклофибробетона — архитектурный декор, малые формы, а также изделия для интерьера.</p>
+                        <p>Все работы проводятся опытными мастерами на современном оборудовании, с использованием только
+                            качественных материалов. Это позволяет нам осуществлять любые проекты, причём мы готовы взять
+                            на себя полный цикл производства изделий от проектирования до изготовления и доставки в любой
+                            регион РФ.</p>
+                    </div>
+
+                        <img class="company__img-1"
+                        src="./image/company/1.jpg" alt="" 
+                        width="746" height="445" loading="lazy">
+                </div>
+
+                <img  class="company__img-2"
+                src="./image/company/2.png" alt="" 
+                width="526" height="570" loading="lazy">
+            
+            </div>
         </section>
 
 
